# CentaurTechnicalIndicators-Rust

./: .gitignore  AGENTS.md  AI_FRIENDLY_ROADMAP.md  CHANGELOG.md  CHANGELOG_RUSTTI_LEGACY.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  ai-policy.yaml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: ai_policy_check.sh  check_indicator_registry_coverage.py  docs_consistency_check.py  validate_indicator_registry.py
.github/workflows/: rust.yml
docs/: 1.4.0_RELEASE_PLAN.md  2_0_PLAN.md  AI_ONBOARDING.md  REPO_MAP.md  api_index.json  api_index.md  indicator_registry.json  indicator_registry.schema.json
examples/: bollinger.rs  composing_indicators.rs  reference.rs  rsi.rs
scripts/: generate_api_index.py
src/: basic_indicators.rs  candle_indicators.rs  chart_trends.rs  correlation_indicators.rs  lib.rs  momentum_indicators.rs  moving_average.rs  other_indicators.rs  strength_indicators.rs  trend_indicators.rs  types.rs  volatility_indicators.rs
tests/: golden.rs  integration.rs  properties.rs
