[package]
name = "centaur_technical_indicators"
version = "1.2.2"
edition = "2021"
rust-version = "1.81"
authors = ["ChironMind"]
description = "A fully configurable technical indicators library with over 70 unique indicators written in pure Rust."
readme = "README.md"
repository = "https://github.com/ChironMind/CentaurTechnicalIndicators-Rust"
homepage = "https://tech.centaurresearchtechnologies.com/"
license = "MIT"
keywords = [
	"trading",
	"technical-analysis",
	"finance",
	"indicators",
	"rust"
]
categories = ["finance", "mathematics", "science", "algorithms"]
exclude = ["/assets", "/.git", "/.github"]
documentation = "https://docs.rs/centaur_technical_indicators"

[[example]]
name = "reference"
path = "examples/reference.rs"

[[example]]
name = "rsi"
path = "examples/rsi.rs"

[[example]]
name = "bollinger"
path = "examples/bollinger.rs"

[[example]]
name = "composing_indicators"
path = "examples/composing_indicators.rs"

[dependencies]

# Dev-deps below are pinned to keep MSRV 1.81 buildable:
#   * proptest 1.6+ pulls `rand` 0.9 → `rand_core` 0.9 → `getrandom` 0.4.
#   * tempfile 3.17+ pulls `getrandom` 0.4 directly.
# `getrandom` 0.4 requires Cargo edition2024 (Rust 1.85+) and breaks 1.81.
# Bump both only alongside an MSRV bump.
[dev-dependencies]
proptest = "=1.5.0"
tempfile = "=3.10.1"
