[package]
name = "centaur_technical_indicators"
version = "1.2.2"
edition = "2021"
rust-version = "1.81"
authors = ["ChironMind"]
description = "A fully configurable technical indicators library with over 70 unique indicators written in pure Rust."
readme = "README.md"
repository = "https://github.com/ChironMind/CentaurTechnicalIndicators-Rust"
homepage = "https://tech.centaurresearchtechnologies.com/"
license = "MIT"
keywords = [
	"trading",
	"technical-analysis",
	"finance",
	"indicators",
	"rust"
]
categories = ["finance", "mathematics", "science", "algorithms"]
include = ["/src", "/examples", "/README.md", "/CHANGELOG.md", "/LICENSE*", "/Cargo.toml"]
documentation = "https://docs.rs/centaur_technical_indicators"

[[example]]
name = "reference"
path = "examples/reference.rs"

[[example]]
name = "rsi"
path = "examples/rsi.rs"

[[example]]
name = "bollinger"
path = "examples/bollinger.rs"

[[example]]
name = "composing_indicators"
path = "examples/composing_indicators.rs"
